# portfolio-v2

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/application/schemas/: auth.py  contact.py  profile.py  project.py  upload.py
backend/app/application/use_cases/: slug.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/domain/entities/: admin_user.py  contact_link.py  contact_message.py  profile.py  project.py
backend/app/domain/repositories/: admin_user_repository.py  contact_repository.py  profile_repository.py  project_repository.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/db/models/: __init__.py  admin_user_model.py  contact_model.py  profile_model.py  project_model.py
backend/app/infrastructure/repositories/: sqlalchemy_admin_user_repository.py  sqlalchemy_contact_repository.py  sqlalchemy_profile_repository.py  sqlalchemy_project_repository.py
backend/app/infrastructure/storage/: local_file_storage.py
backend/app/presentation/api/v1/: dependencies.py  router.py
backend/app/presentation/api/v1/routes/: admin_contacts.py  admin_me.py  admin_profile.py  admin_projects.py  admin_uploads.py  auth.py  public_contacts.py  public_profile.py  public_projects.py
backend/app/tests/: test_health.py  test_public_content.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+1 more)
(+30 files in other folders)
